# cubagem-1.0

./: .gitmodules  CMakeLists.txt  Dockerfile  config.h  connector.cpp  connector.h  controller.cpp  controller.h  cubagem-gui  executer.cpp  executer.h  main.cpp  pclviewer.cpp  pclviewer.h  processor.cpp  processor.h  regressor.cpp  regressor.h  run.sh  sensor.cpp  sensor.h
Client/: Dockerfile  client  client.cpp  cubagem-gui  objectsdata.h  run.sh
Test/Client/: CMakeLists.txt  client.cpp  client1.cpp  cubagem-gui
Test/Server/: CMakeLists.txt  cubagem-gui  server.cpp
cubagem-1_0/: CMakeLists.txt
